Rendered html page and changed title tag data

--- a/views/overview.html
+++ b/views/overview.html
@@ -1,8 +1,12 @@
 <html>
   <head>
-    <title>Title</title>
+    <title><%= title %></title>
   </head>
   <body>
     <h2>Welcome to GeeksforGay</h2>
+    <!-- <button onclick="changePageTitle()">Change Page Title</button> -->
+    <script type="text/javascript">
+      document.title = title;
+    </script>
   </body>
 </html>
